--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,13 @@
+body{
+  background-color: rgb(130, 106, 251);
+}
+
 /* Container */
 .container {
+  width: 90%; 
   margin: auto;
-  width: 50%;
-  padding: 45px;
-   background-color: rgb(130,106,251);
+  padding: 20px;
+  background-color: rgb(255, 255, 255);
 }
 
 /* Header */
@@ -115,6 +119,7 @@ button[type="submit"] {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
+  width: 100%;
 }
 
 button[type="submit"]:hover {
@@ -134,6 +139,6 @@ button[type="submit"]:hover {
     width: 100%;
   }
   .input-box {
-    width: 48%;
+    width: 100%;
   }
 }
