--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,9 @@
-body{
-  background-color: rgb(130, 106, 251);
-}
-
 /* Container */
 .container {
-  width: 50%; 
   margin: auto;
-  padding: 20px;
-  background-color: rgb(255, 255, 255);
+  width: 50%;
+  padding: 45px;
+   background-color: rgb(130,106,251);
 }
 
 /* Header */
@@ -119,7 +115,6 @@ button[type="submit"] {
   padding: 10px 20px;
   font-size: 16px;
   cursor: pointer;
-  width: 100%;
 }
 
 button[type="submit"]:hover {
@@ -139,6 +134,6 @@ button[type="submit"]:hover {
     width: 100%;
   }
   .input-box {
-    width: 100%;
+    width: 48%;
   }
 }
